fix button jumping

--- a/packages/augur-ui/src/modules/trading/components/wrapper/wrapper.styles.less
+++ b/packages/augur-ui/src/modules/trading/components/wrapper/wrapper.styles.less
@@ -24,6 +24,10 @@
     &.Full {
       flex-grow: unset;
     }
+
+    &.Liquidity {
+      flex-grow: inherit;
+    }
   }
 }
 
